crates/ink/tests/ui/contract/fail/message/message-hygiene-try.stderr
error[E0592]: duplicate definitions with name `try_message`
  --> tests/ui/contract/fail/message/message-hygiene-try.rs:18:9
   |
3  | #[ink::contract]
   | ---------------- other definition for `try_message`
...
18 |         pub fn try_message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `try_message`
